# featcal

./: .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
scripts/: run_smoke.sh  run_ta8.sh
src/featcal/: __init__.py  constants.py  data.py  evaluate.py  featcal.py  merge.py  models.py  run_ta8.py  smoke.py  solver.py  utils.py
src/featcal/classification/: __init__.py
tests/: test_solver.py
