[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featcal"
version = "0.1.0"
description = "Minimal official demo for FeatCal on CLIP ViT-B/32 TA8."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "datasets>=2.18",
  "numpy>=1.23",
  "pillow>=9.5",
  "protobuf<5",
  "safetensors>=0.4",
  "torch>=2.1",
  "tqdm>=4.66",
  "transformers>=4.37",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
featcal-ta8 = "featcal.run_ta8:main"
featcal-smoke = "featcal.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
